--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
           
       - name: Score Repositroies
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.TEST1 }}
         run: |
           # 将scorecard加入环境变量
           export PATH=$PATH:$GITHUB_WORKSPACE
