--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,7 +53,10 @@ jobs:
           repos=${{steps.repo.outputs.repoList_ALL}}
           arr=(${repos//,/ })
           length=${#arr[@]}
-          
+          { for((i=0;i<10;i++));do
+            echo $i
+            done
+          }&
         
           {
             for((i=0;i<length;i=i+8));do
