--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,7 +55,7 @@ jobs:
           length=${#arr[@]}
           {
             for((i=0;i<length;i=i+8))
-              repoName=https://github.com/laiyoufafa/${arr[$i]}
+              repoName="https://github.com/laiyoufafa/${arr[$i]}"
               echo "time:${i}    repos_url:${repoName} "
               index=0
               ((tmp=i/8,index=tmp%3))
