--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,7 +71,7 @@ jobs:
               fi
               str=""
               str=$(scorecard --repo $repoName --format json) || (sleep 60s && str=$(scorecard --repo $repoName --format json)) || (sleep 60s && str=$(scorecard --repo $repoName --format json)) || str=$(echo "faild on ${repoName}")
-              echo $str >> $TARGET_FILEe
+              echo $str >> $TARGET_FILE
               echo "name:first  ${repoName} finished"
               sleep 5s
             done
