--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,9 +78,9 @@ jobs:
             done
           }&
           wait
-          gh auth setup-git -h github.com
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
-          git add .
-          git commit -m "Update profile/scores.txt from CI"
-          git push
+         # gh auth setup-git -h github.com
+         # git config --global user.email "github-actions[bot]@users.noreply.github.com"
+         # git config --global user.name "github-actions[bot]"
+         # git add .
+         # git commit -m "Update profile/scores.txt from CI"
+         # git push
