--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,11 +77,11 @@ jobs:
               sleep 20s
               wait
             done
+            gh auth setup-git -h github.com
+            git config --global user.email "github-actions[bot]@users.noreply.github.com"
+            git config --global user.name "github-actions[bot]"
+            git add .
+            git commit -m "Update profile/scores.txt from CI"
+            git push
           }&
-          wait
-         # gh auth setup-git -h github.com
-         # git config --global user.email "github-actions[bot]@users.noreply.github.com"
-         # git config --global user.name "github-actions[bot]"
-         # git add .
-         # git commit -m "Update profile/scores.txt from CI"
-         # git push
+          
